--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
+    "mongodb": "^6.18.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
